--- a/LAZAREV/index.html
+++ b/LAZAREV/index.html
@@ -120,7 +120,34 @@
                 </div>
             </div>
             <div id="page2">
-
+                 <div id="page2-left">
+                    <p>Exclusive insights into <br>UI/UX and product design</p>
+                    <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon
+                      ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full
+                      display</h5>
+                 </div>
+                 <div id="page2-right">
+                    <div class="right-elem">
+                        <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                        <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                            alt="">
+                    </div>
+                    <div class="right-elem">
+                        <h2>How AI Influences Design And The <br>Recioprocal Impact Of UX On AI-Driven <br>Products</h2>
+                        <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                            alt="">
+                    </div>
+                    <div class="right-elem">
+                        <h2>Lazerev Becomes A Professional Webflow <br>Partner</h2>
+                        <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                            alt="">
+                    </div>
+                    <div class="right-elem">
+                        <h2>AI-Based Industrial Software Canvass AI <br>Secures $7.5M In Funding</h2>
+                        <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                            alt="">
+                    </div>
+                 </div>
             </div>
          </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
